syntax = "proto3";

package protos;

import "pipeline.proto";

option go_package = "github.com/streamdal/snitch-protos/build/go/protos";

// Included in WASM response; SDK is responsible for interpreting the response
// status and how it relates to the step condition.
// ie. WASM func returns WASM_EXIT_CODE_INTERNAL_ERROR lookup ON_ERROR
// conditions to determine what to do next.
// ie. WASM func returns WASM_EXIT_CODE_SUCCESS lookup ON_MATCH conditions
// to determine what to do next;
enum WASMExitCode { // protolint:disable:this ENUM_FIELD_NAMES_PREFIX
  WASM_EXIT_CODE_UNSET = 0;
  WASM_EXIT_CODE_SUCCESS = 1;
  WASM_EXIT_CODE_FAILURE = 2; // Probably need better names for these as FAILURE is too harsh
  WASM_EXIT_CODE_INTERNAL_ERROR = 3;
}

// SDK generates a WASM request and passes this to the WASM func
message WASMRequest {
  protos.PipelineStep step = 1;
  bytes input = 2;
}

// Returned by all WASM functions
message WASMResponse {
  bytes output = 1;
  WASMExitCode exit_code = 2;
  string exit_msg = 3;
}
